refactor: address mechanical Sonar findings (dead comments, unused throws, primitive booleans, assertion clarity)